# ble

gatt_server_service_table/be/: build.sh  db.go  help  http.go  http_serve_test.go  provision_core.go  temp_user_cache.go
gatt_server_service_table/java/: CRC16.java
gatt_server_service_table/main/: .gatts_table_creat_demo.c.swp  a.out  ble_core.c  ble_core.h  file_core.c  file_core.h  gatts_table_creat_demo.c  gatts_table_creat_demo.h  global_defines.h  main.c  net_state.c  net_state.h  state_core.c  state_core.h  test.c  todo  wifi_state.h
tera_fire/: partitions.csv  sdkconfig  sdkconfig.old
tera_fire/be/: .db.go.swp  .geo_core.go.swp  .http.go.swp  .image_core.go.swp  .temp_user_cache.go.swp  build.sh  db.go  help  http.go  image_core.go  provision_core.go  sensor_core.go
tera_fire/java/: .CRC16.java.swp
tera_fire/main/: .ble_core.c.swp  .file_core.c.swp  .file_core.h.swp  .main.c.swp  .net_state.c.swp  .wifi_core.c.swp  .wifi_core.h.swp  CMakeLists.txt  ble_core.c  ble_core.h  cscope.out  file_core.c  file_core.h  global_defines.h  http_core.c  http_core.h  main.c  net_state.c  net_state.h  packet_core.c  packet_core.h  state_core.c  tags  thermal.c  thermal.h  todo  wifi_core.c  wifi_core.h  wifi_state.c  wifi_state.h
tera_fire/notes/: db  notes
