idf_component_register(SRCS "state_core.c"
                            "main.c"
                            "file_core.c"
                            "ble_core.c"
                            "wifi_state.c"
                            "wifi_core.c"
                            "net_state.c"
                            INCLUDE_DIRS ".")
